added website link

--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -401,6 +401,9 @@
             we would have for the task. We would then stick with whoever’s implementation worked better (usually Amy’s) and worked together to debug any 
             problems in their implementation that resulted in unexpected renderings.
         </p>
+		<p>
+            website link: https://cal-cs184-student.github.io/sp22-project-webpages-amynattran/proj3-1/index.html
+        </p>
 
 
     </div>
