added part 5 label

--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -361,7 +361,7 @@
             As can be seen by the images above, the lower the s value, the more noise there is in our rendering. The more samples we have, the smoother the
             image seems to be.
         </p>
-        <h2 align="middle"></h2>
+        <h2 align="middle">Part 5: Adaptive Sampling</h2>
         <p>
             Our implementation of adaptive sampling extends from our raytrace_pixel function from Part 1.2 by adding a few more variables and calculations.
             We added two doubles, s1, and s2, that represent the accumulated illuminance and illuminance squared respectively for each of our sampled rays.
